:sparkles: Implement user profile edit feature.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,12 @@
 # Validation
 
 ## User Validation
-NotEmpty=ეს სავალდებულო ველია.
-Size.user.username=მომხმარებლის სახელი უნდა შეიცავდეს {0}-დან {1} სიმბოლომდე.
-Duplicate.user.username=ეს მომხმარებლის სახელი დაკავებულია.
-Size.user.password=პაროლი უნდა შედგებოდეს მინიმუმ {0} სიმბოლოსგან.
-Diff.user.passwordConfirm=პაროლები არ ემთხვევა.
+Size.userForm.username=მომხმარებლის სახელი უნდა შეიცავდეს {0}-დან {1} სიმბოლომდე.
+Duplicate.userForm.username=ეს მომხმარებლის სახელი დაკავებულია.
+Size.userForm.password=პაროლი უნდა შედგებოდეს მინიმუმ {0} სიმბოლოსგან.
+Diff.userForm.passwordConfirm=პაროლები არ ემთხვევა.
+Diff.userForm.passwordOld=ძველი პაროლი არასწორია.
+Equals.userForm.password.old=ახალი პაროლი უნდა განსხვავდებოდეს ძველისგან.
 ## End User Validation
 
 ## End Validation
